--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "require": {
         "zendframework/zendpdf": "^2.0"
     },
+    "require-dev": {
+        "phing/phing": "2.*"
+    },
     "repositories": [
         {
             "type": "composer",
