--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="PDF Merge" default="build" basedir="." description="Example of mereging PDF files into one PDF file.">
-    <target name="default" depends="prepare">
-
+    <target name="default" depends="package">
     </target>
-
     <target name="prepare">
         <mkdir dir="build/src"/>
         <mkdir dir="dist"/>
@@ -27,7 +25,7 @@
     </target>
     <target name="package" depends="clean,build">
         <pharpackage basedir="build" destfile="./dist/merge.phar" stub="src/stub.php">
-            <fileset dir="build" includes="**/**" />
+            <fileset dir="build" includes="**/*.php" />
         </pharpackage>
     </target>
 </project>
